# house-price-predictor

./: .env.example  .gitignore  Entregable.md  README.md  makefile  pyproject.toml
data/: script.sh
data/staged/: full.parquet  test.csv  test.parquet  train.csv  train.parquet
mlruns/0/: meta.yaml
mlruns/521658517913579349/: meta.yaml
mlruns/521658517913579349/0803363c0e924f5c96a5fce2bdc9bb72/: meta.yaml
mlruns/521658517913579349/08846257c4624a3aa7e05fc082b4e753/: meta.yaml
mlruns/521658517913579349/0c8b2cf3abe9481a819ede679905df81/: meta.yaml
mlruns/521658517913579349/146b07d802544d53a3a5d66e95f2cccf/: meta.yaml
mlruns/521658517913579349/1516e16287c8421a9896d17bb3f023e2/: meta.yaml
mlruns/521658517913579349/198b621887e64f2f89410e1427831f22/: meta.yaml
mlruns/521658517913579349/1f584f1d50e24b76bf11892cbbb8b533/: meta.yaml
mlruns/521658517913579349/278f057f33fc464d959402892e7a4489/: meta.yaml
mlruns/521658517913579349/2b114c498fe74e4cb21edb81c05b1989/: meta.yaml
mlruns/521658517913579349/36b87e19e6b6458ea3b3240c79fad02f/: meta.yaml
mlruns/521658517913579349/474e01ee722b46108e8b755b47835f35/: meta.yaml
mlruns/521658517913579349/551a5c4232714d7facfc00e0f2dd47f3/: meta.yaml
mlruns/521658517913579349/554a10035ffc4974ad1a73c076e34d53/: meta.yaml
mlruns/521658517913579349/6e774ed4b5d64bf5a0b95542813d77fa/: meta.yaml
mlruns/521658517913579349/6e85705e31884b24a9e3fe4430271a53/: meta.yaml
mlruns/521658517913579349/775b6e9e50eb454983efe2b9d8b344ca/: meta.yaml
mlruns/521658517913579349/7aaef3b63a0f4cdab6722aacff220faf/: meta.yaml
mlruns/521658517913579349/8f5e83f45244443a969a7f5fad55502a/: meta.yaml
mlruns/521658517913579349/99bbf4cad91a4d2a9578548fe73ed663/: meta.yaml
mlruns/521658517913579349/a8b70f1b852a45a5b4bc40bf719e9dde/: meta.yaml
mlruns/521658517913579349/afad932f8ff64406933ca2dfa4c249fc/: meta.yaml
mlruns/994727308414446137/: meta.yaml
proyecto-2/: entregable.md
proyecto-2/scripts/: flink-logs.sql  ingreso_por_pais.sql  ingreso_por_producto.sql  paises_unicos.sql  productos_mas_vendidos.sql  ventas_por_fecha.sql
src/house_price_predictor/: Spark.ipynb  __init__.py  proyecto.ipynb  requirements.txt  test-s3-bucket.ipynb
(+320 files in other folders)
