[project]
name = "house-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan-c-s", email = "juancamilo.salazar2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.23",
    "dash>=3.0.4",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]

[project.scripts]
house-price-predictor = "house_price_predictor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
