[project]
name = "house-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan-c-s", email = "juancamilo.salazar2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.23",
    "dash>=3.0.4",
    "dotenv>=0.9.9",
    "duckdb>=1.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mlflow>=2.21.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
    "python-dotenv==1.0.0",
    "dash-mantine-components==0.10.0"
]

[project.scripts]
house-price-predictor = "house_price_predictor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
